[package]
name = "tyght-map"
version = "0.1.0-alpha.4"
edition = "2021"
license = "MIT"
authors = ["hlbarber@amazon.co.uk"]
description = "A static type map implementation."
repository = "https://github.com/hlbarber/tyght-map/"

[features]
default = ["size-32"]
size-16 = []
size-32 = ["size-16"]

[dev-dependencies]
static_assertions = "1.1.0"
