[package]
name = "tyght-map"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["harrybarber@protonmail.com"]
description = "A static type map implementation."
repository = "https://github.com/hlbarber/tyght-map/"
documentation = "https://docs.rs/tyght-map/"
keywords = ["no_std", "typemap"]
categories = ["data-structures", "no-std"]

[dev-dependencies]
static_assertions = "1.1.0"
